[gd_scene load_steps=9 format=3 uid="uid://jnp46arql5hw"]

[ext_resource type="Texture2D" uid="uid://cdun50r11x3jx" path="res://Assets/backgrounds/lindobar_back.jpg" id="1_2c4ji"]
[ext_resource type="Script" uid="uid://1rf3a7n3k1g6" path="res://scripts/game_settings/lindobar.gd" id="1_dddqj"]
[ext_resource type="PackedScene" uid="uid://c8dvxmj5ng33d" path="res://scenes/Personagens/prota_move.tscn" id="3_dddqj"]
[ext_resource type="Script" uid="uid://dwdj424y3d2ng" path="res://scripts/characters/npc.gd" id="4_qq0wf"]
[ext_resource type="Texture2D" uid="uid://cvext02p5udfb" path="res://Assets/characters/homem_encapuzado_png.png" id="5_7gu00"]
[ext_resource type="Texture2D" uid="uid://t2j6fmobr1cd" path="res://Assets/baixados.png" id="6_eov8x"]
[ext_resource type="PackedScene" uid="uid://bm5h6s4fkf3a0" path="res://scenes/Personagens/character_body_2d.tscn" id="7_eov8x"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eov8x"]
radius = 44.0
height = 302.0

[node name="Lindobar" type="Node2D"]
script = ExtResource("1_dddqj")

[node name="LindobarBack" type="Sprite2D" parent="."]
position = Vector2(962, 542)
scale = Vector2(1.2, 1.2)
texture = ExtResource("1_2c4ji")

[node name="NPC" type="Area2D" parent="."]
position = Vector2(1592, -26)
script = ExtResource("4_qq0wf")

[node name="HomemEncapuzadoPng" type="Sprite2D" parent="NPC"]
position = Vector2(185, 640)
scale = Vector2(0.827, 0.733)
texture = ExtResource("5_7gu00")

[node name="monitoring" type="CollisionShape2D" parent="NPC"]
position = Vector2(183, 656)
shape = SubResource("CapsuleShape2D_eov8x")
one_way_collision_margin = 128.0

[node name="indicador" type="Sprite2D" parent="NPC"]
visible = false
position = Vector2(187, 435)
texture = ExtResource("6_eov8x")

[node name="player_move" parent="." instance=ExtResource("3_dddqj")]
texture_filter = 1
position = Vector2(464, 616)
rotation = 3.14159
scale = Vector2(1.4, -1.3)

[node name="CharacterBody2D" parent="." instance=ExtResource("7_eov8x")]
visible = false
position = Vector2(713, 638)

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -40.0
offset_right = 1638.0
offset_bottom = 901.0
scale = Vector2(1.22, 1.22)
color = Color(0, 0, 0, 1)
